feat: enable netty unsafe memory access